# vulnAI

./: .gitignore  CHANGELOG.md  pyproject.toml
src/vulnai/: cli.py
src/vulnai/analysis/: bb.py  builder.py  cfg.py  definition.py  dfg.py  reachingdef.py
src/vulnai/parser/: dataTest.py  python_parser.py
