[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnAI"
version = "0.0.1"
authors = [
  { name="Syed Shayaan Hassan", email="shayaan.work2@gmail.com" },
]
description = "A static analyzer using AI"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/shayaan09/vulnAI"

[project.scripts]
vulnai = "vulnai.cli:main"